# gunshotmatch-method-writer

./: .bumpversion.cfg  .pre-commit-config.yaml  CONTRIBUTING.rst  README.rst  formate.toml  pyproject.toml  repo_helper.yml  tox.ini
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: octocheese.yml  python_ci.yml  python_ci_linux.yml
gunshotmatch_method_writer/: __init__.py
gunshotmatch_method_writer/_pycode/: __init__.py  parser.py
tests/: requirements.txt  test_write_defaults.py
tests/test_write_defaults_/: test_write_defaults.txt
