[build-system]
requires = [ "whey",]
build-backend = "whey"

[project]
name = "gunshotmatch-method-writer"
version = "0.1.0"
description = "Method writer for GunShotMatch."
readme = "README.rst"
keywords = []
dynamic = [ "requires-python", "classifiers", "dependencies",]

[[project.authors]]
name = "Dominic Davis-Foster"
email = "dominic@davis-foster.co.uk"

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/GunShotMatch/gunshotmatch-method-writer"
"Issue Tracker" = "https://github.com/GunShotMatch/gunshotmatch-method-writer/issues"
"Source Code" = "https://github.com/GunShotMatch/gunshotmatch-method-writer"

[tool.whey]
base-classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
python-versions = [ "3.8", "3.9", "3.10", "3.11", "3.12",]
python-implementations = [ "CPython",]
platforms = [ "Windows", "macOS", "Linux",]
license-key = "BSD-3-Clause"
package = "gunshotmatch_method_writer"
additional-files = [ "include gunshotmatch_method_writer/_pycode/README.md",]

[tool.mypy]
python_version = "3.8"
namespace_packages = true
check_untyped_defs = true
warn_unused_ignores = true
no_implicit_optional = true
show_error_codes = true

[tool.snippet-fmt]
directives = [ "code-block",]

[tool.snippet-fmt.languages.python]
reformat = true

[tool.snippet-fmt.languages.TOML]
reformat = true

[tool.snippet-fmt.languages.ini]

[tool.snippet-fmt.languages.json]

[tool.dependency-dash."requirements.txt"]
order = 10

[tool.dependency-dash."tests/requirements.txt"]
order = 20
include = false

[tool.dep_checker.name_mapping]
attrs = "attr"
